# levtree

./: .gitmodules  CMakeLists.txt  PKGBUILD  PKGBUILD2  PKGBUILD_LIB  build.py  levnode.c  levtree.c  levtree.h  levtree.pro  main.c  pymodule.c  python2-levtree-0.1-1-x86_64.pkg.tar.xz  setup.py  test.py
levtree/: .cproject  .project  CMakeLists.txt  common.h  levtree.c  levtree.h  levtree.pro  levtree_standing.c  levtree_standing.h  main.c  pylevtree.c  python3.c  pywlevtree.c  setup.py  test.c  test.cpp  wlevtree.c  wlevtree.h
levtree/cpp/: Levtree.cpp  Levtree.hpp
levtree/levtree/: levnode.c  levnode.h  levtree.c  levtree.h  levtree_standing.c  levtree_standing.h  levtree_wrap.c  wlevtree.c  wlevtree.h
levtree/levtree++/: Levtree.cpp  Levtree.hpp  levtree.i
levtree/test/: test.c  test.cpp  test.py
pkg/python2-levtree/: .MTREE  .PKGINFO
python2-levtree-0.1-1/: levtree.c  levtree.h  levtree.pro  levtree_standing.c  levtree_standing.h  main.c  pylevtree.c  pymodule.c  pywlevtree.c  test.py  wlevnode.c  wlevnode.h  wlevtree.c  wlevtree.h
src/: CMakeLists.txt  __init__.py  setup.py
src/c/: CMakeLists.txt
src/c/levtree/: common.h  levnode.c  levnode.h  levtree.c  levtree.h  levtree.pro  levtree_standing.c  wlevnode.h
src/cpp/: CMakeLists.txt
src/cpp/levtree++/: Levtree.cpp  Levtree.hpp  levtree.py  levtree_wrap.cpp  vectorwrapper.h
src/levtree/: levnode.h  levtree_standing.h  pywlevtree.c  setup.py  wlevnode.c  wlevtree.c
src/levtree++/: levtree.i  levtree_wrap.cxx
src/python2-levtree-0.1-1/: levnode.h  levtree.c  levtree.h  levtree.pro  main.c  pymodule.c  setup.py
src/swig/: CMakeLists.txt  __init__.py  levtree.i  setup.py
test/: CMakeLists.txt  dictionary.json  test.c  test.cpp  test.py  test2.py  utf8_test.c
